--- a/prod/index.html
+++ b/prod/index.html
@@ -20,7 +20,7 @@
     <script type="text/javascript">
         app.initialize();
     </script>
-    <script src="awebapp2.js"></script>
+    <script src="functions-to-java.js"></script>
 </body>
 
 </html>
